# SDLXX

./: .clang-format  .clang-tidy  .cmake-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  LICENCE.md  LICENSE  LICENSE.md  README.md  vcpkg.json
Box2D/: CMakeLists.txt
HelloWorld/: HelloWorld.cpp
SDL2XX/: Animation.h  Color.cpp  Color.h  Exception.cpp  Exception.h  Log.cpp  Log.hpp  Renderer.cpp  Renderer.h  SDL2XX.cpp  SDL2XX.h  SDLIMG.cpp  SDLIMG.h  Test.cpp  Texture.cpp  Texture.h  Utils.cpp  Utils.h  Window.cpp  Window.h
SDLXX/: Animation.h  AnimationTest.cpp  Color.cpp  Color.h  Exception.cpp  Exception.h  Log.cpp  Log.h  Log.hpp  Log_modern.cpp  Renderer.h  SDLXX.cpp  SDLXX.h  SDLXX_image.cpp  SDLXX_image.h  SDLXX_mixer.cpp  SDLXX_mixer.h  SDLXX_net.cpp  SDLXX_net.h  SDLXX_ttf.cpp  SDLXX_ttf.h  Test.cpp  Texture.cpp  Texture.h  Utils.h  Window.cpp  Window.h
app/: CMakeLists.txt
app/testgame/: Box2DDrawer.cpp  Box2DDrawer.h  CMakeLists.txt  Game.cpp  Game.h  Menu.cpp  Menu.h  main.cpp
cmake/: Doxygen.cmake  DynamicChecks.cmake  FindSDL2.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake  LibraryPaths.cmake  README.md  (+1 more)
docs/: Animation_8h.html  Animation_8h__incl.map  Animation_8h__incl.md5  Animation_8h_source.html  Button_8h.html  Button_8h__incl.map  Button_8h__incl.md5  Button_8h_source.html  CMakeLists.txt  Color_8h.html  Color_8h__dep__incl.map  Color_8h__dep__incl.md5  Color_8h__incl.map  Color_8h__incl.md5  Color_8h_source.html  Dimensions_8h.html  Dimensions_8h__dep__incl.map  Dimensions_8h__dep__incl.md5  Dimensions_8h_source.html  Display_8h.html  Display_8h_source.html  Events_8h.html  Events_8h__dep__incl.map  Events_8h__dep__incl.md5  Events_8h__incl.map  Events_8h__incl.md5  Events_8h_source.html  Font_8h.html  Font_8h__incl.map  Font_8h__incl.md5  Font_8h_source.html  Image_8h.html  Image_8h__incl.map  Image_8h__incl.md5  Image_8h_source.html  Keyboard_8h.html  Keyboard_8h_source.html  Log_8h.html  Log_8h__incl.map  Log_8h__incl.md5  (+270 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enums_0.js  (+88 more)
examples/: CMakeLists.txt
examples/01_hello_world/: CMakeLists.txt  main.cpp
examples/02_show_image/: CMakeLists.txt  main.cpp
examples/03_events/: CMakeLists.txt  main.cpp
examples/04_keyboard/: CMakeLists.txt  main.cpp
examples/05_optimized_surface/: CMakeLists.txt  main.cpp
examples/06_images/: CMakeLists.txt  main.cpp
examples/07_texture_rendering/: CMakeLists.txt  main.cpp
examples/08_geometry_rendering/: CMakeLists.txt  main.cpp
examples/09_viewport/: CMakeLists.txt  main.cpp
examples/10_color_keying/: CMakeLists.txt  main.cpp
examples/11_clip_rendering/: CMakeLists.txt  main.cpp
examples/12_color_modulation/: CMakeLists.txt  main.cpp
examples/13_alpha_blending/: CMakeLists.txt  main.cpp
examples/14_animation/: CMakeLists.txt  main.cpp
examples/15_rotation_and_flipping/: CMakeLists.txt  main.cpp
examples/16_fonts/: CMakeLists.txt  main.cpp
examples/17_mouse_events/: CMakeLists.txt  button.cpp  button.h  main.cpp
examples/box2d_testbed/: Box2dDebugDraw.cpp  Box2dDebugDraw.h  CMakeLists.txt  game.h  main.cpp
examples/client/: CMakeLists.txt
examples/client/src/: Image.cpp  LTexture.cpp  LTexture.h  Motion.cpp  Move.cpp  Texture.cpp  Tile.cpp  Tile.h  main.cpp
examples/game/: CMakeLists.txt  GameLegacy.h  game.h  main.cpp
examples/game/assets/: map.tmx  map1.tmx
examples/game/assets/legacy/tcp/: TCPClient.cpp  TCPClient.h  TCPServer.cpp  main.cpp
examples/game/tmx/: CMakeLists.txt  TMX_Utils.cpp  TMX_data.cpp  TMX_layer.cpp  TMX_map.cpp  TMX_object.h  TMX_offset.cpp  TMX_tile.h  TMX_tileset.cpp  TMX_tileset.h  testTiny.cpp
examples/menu/: CMakeLists.txt  Menu.cpp  Menu.h  main.cpp
examples/server/: CMakeLists.txt
examples/server/src/: TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h  main.cpp
examples/testgame/: Box2DDrawer.cpp  Box2DDrawer.h  CMakeLists.txt  Game.cpp  Game.h  Menu.cpp  Menu.h  main.cpp
src/core/: Animation.cpp  CMakeLists.txt  Color.cpp  Dimensions.cpp  Event.cpp  Events.cpp  Exception.cpp  Log.cpp  Object.cpp  Point.cpp  Rectangle.cpp  Renderer.cpp  SDLXX.cpp  SDLXX_core.cpp  Scene.cpp  SceneManager.cpp  Surface.cpp  Texture.cpp  Timer.cpp  Utils.cpp  Version.cpp  Window.cpp  blendmode.cpp  color.cpp  core_api.cpp  dimensions.cpp  display.cpp  events.cpp  exception.cpp  gl.cpp  log.cpp  point.cpp  rectangle.cpp  renderer.cpp  sdlxx_core.cpp  surface.cpp  texture.cpp  time.cpp  timer.cpp  version.cpp  (+1 more)
src/game/: CMakeLists.txt  Game.cpp
src/gui/: Animation.cpp  Button.cpp  CMakeLists.txt  Scene.cpp  SceneManager.cpp  button.cpp  layout.cpp  node.cpp  parent_node.cpp  scene.cpp  scene_manager.cpp  style.cpp
src/image/: CMakeLists.txt  Image.cpp  SDLXX_image.cpp  image_api.cpp  image_surface.cpp  image_texture.cpp
src/mixer/: CMakeLists.txt  SDLXX_mixer.cpp  mixer_api.cpp
src/net/: CMakeLists.txt  SDLXX_net.cpp  net_api.cpp
src/net/tcp/: TCPClient.cpp  TCPClient.h  TCPServer.cpp  main.cpp
src/tmx/: CMakeLists.txt  TMX_Utils.cpp  TMX_data.cpp  TMX_image.cpp  TMX_layer.cpp  TMX_map.cpp  TMX_object.cpp  TMX_objectgroup.cpp  TMX_offset.cpp  TMX_tile.cpp  TMX_tileset.cpp  testTiny.cpp
src/ttf/: CMakeLists.txt  Font.cpp  SDLXX_ttf.cpp  Text.cpp  font.cpp  ttf_api.cpp
src/utils/tcbrindle-sdlxx/test/: CMakeLists.txt  bits_test.cpp  blendmode_test.cpp  catch_main.cpp  clipboard_test.cpp  cpuinfo_test.cpp  endian_test.cpp  filesystem_test.cpp  hints_test.cpp  init_test.cpp  log_test.cpp  platform_test.cpp  power_test.cpp  scancode_test.cpp  timer_test.cpp  version_test.cpp
(+214 files in other folders)
