add_subdirectory(01_hello_world)
add_subdirectory(02_show_image)
add_subdirectory(03_events)
add_subdirectory(04_keyboard)
add_subdirectory(05_optimized_surface)
add_subdirectory(06_images)
add_subdirectory(07_texture_rendering)
add_subdirectory(08_geometry_rendering)
# add_subdirectory(menu)
# add_subdirectory(testgame)
