add_subdirectory(01_hello_world)
add_subdirectory(02_show_image)
add_subdirectory(03_events)
add_subdirectory(04_keyboard)
add_subdirectory(05_optimized_surface)
add_subdirectory(06_images)
add_subdirectory(07_texture_rendering)
add_subdirectory(08_geometry_rendering)
add_subdirectory(09_viewport)
add_subdirectory(10_color_keying)
add_subdirectory(11_clip_rendering)
add_subdirectory(12_color_modulation)
add_subdirectory(13_alpha_blending)
add_subdirectory(14_animation)
add_subdirectory(15_rotation_and_flipping)
add_subdirectory(16_fonts)
add_subdirectory(17_mouse_events)
add_subdirectory(menu)
add_subdirectory(box2d_testbed)
